Social Media added

--- a/index.html
+++ b/index.html
@@ -505,8 +505,8 @@
 					  </li>
 					  <li><a href="https://www.facebook.com/anastasia.sol" target="_blank"><i class="fa fa-facebook"></i></a>
 					  </li>
-					  <!-- <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-					  </li> -->
+					  <li><a href="https://www.linkedin.com/in/solarblue" target="_blank"><i class="fa fa-linkedin"></i></a>
+					  </li>
 					</ul>
 				  </div>
 				</div>
