fixing members - still fixes needed

--- a/index.html
+++ b/index.html
@@ -359,13 +359,15 @@
                     <div class="team-member">
                         <img src="img/team/andy1.jpg" class="img-responsive img-circle" alt="">
                         <h4><a href="http://www.amfounta.com/" target="_blank">Antigoni-Maria Founta</a></h4>
-                        <p class="text-muted">Andy is an Informatics graduate from the Ionian University, passionate about.. well pretty much anything that has to do with geography. Other than that, she also loves AI and Data Analysis, photography and socialising with people. Here at SheSharp, among many other stuff she is the Social Media guru.</p>
+                        <p class="text-muted">Andy is a Data Scientist wannabe, currently studying at Aristotle University of Thessaloniki. She is passionate about... well pretty much anything that has to do with geography and data. Here at SheSharp, among many other stuff she is the Social Media guru.</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/AntiFou" target="_blank"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="https://www.facebook.com/anti.fou" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="https://gr.linkedin.com/in/amfounta" target="_blank"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                            <li><a href="https://github.com/AndyFou" target="_blank"><i class="fa fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -382,6 +384,8 @@
                             </li>
                             <li><a href="http://gr.linkedin.com/in/katerinakatmada" target="_blank"><i class="fa fa-linkedin"></i></a>
                             </li>
+                            <li><a href="https://github.com/katerinakat" target="_blank"><i class="fa fa-github"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -396,6 +400,8 @@
                             <li><a href="https://www.facebook.com/tazzyannie" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="http://gr.linkedin.com/in/achatsat" target="_blank"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                            <li><a href="https://github.com/sortingbubbles" target="_blank"><i class="fa fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -414,6 +420,8 @@
                     </li>
                     <li><a href="http://gr.linkedin.com/in/amaliavradi" target="_blank"><i class="fa fa-linkedin"></i></a>
                     </li>
+                    <li><a href="https://github.com/amaliavr" target="_blank"><i class="fa fa-github"></i></a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -428,6 +436,8 @@
                     <li><a href="https://www.facebook.com/sirodoht" target="_blank"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li><a href="http://gr.linkedin.com/in/sirodoht" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    </li>
+                    <li><a href="https://github.com/sirodoht" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -494,22 +504,75 @@
 				  </div>
 				</div>
 			</div>
+      <div class="row">
+        <div class="col-sm-4">
+            <div class="team-member">
+                <img src="img/special-thanks/argiris1.jpg" class="img-responsive img-circle" alt="">
+                <h4><a href="http://argiris.me/portfolio/" target="_blank">Argiris Paraskevas</a></h4>
+                <p class="text-muted">Argiris is a full-time designer and part-time Informatics student. He helped design our logo and many of the graphics. He was also the host/tutor to our Photoshop Seminar. Finally -quoting him- he is more graphical than Photoshop!</p>
+                <ul class="list-inline social-buttons">
+                    <li><a href="https://twitter.com/fmayakos" target="_blank"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/fmayakos" target="_blank"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li><a href="http://gr.linkedin.com/in/argirisparaskevas" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="team-member">
+                <img src="img/special-thanks/petros1.jpg" class="img-responsive img-circle" alt="">
+                <h4>Petros Gasteratos</h4>
+                <p class="text-muted">Petros is a full stack web developer, a music engineer, a designer, our very own wildcard. He is part of the graphics team and is mainly occupied with the posters. Last but not least, he is also an Informatics student at the Ionian University.</p>
+                <ul class="list-inline social-buttons">
+                    <li><a href="https://twitter.com/ptrgast" target="_blank"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/pgasteratos" target="_blank"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li><a href="http://gr.linkedin.com/in/pgasteratos" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    </li>
+                    <li><a href="https://github.com/ptrgast" target="_blank"><i class="fa fa-github"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+          <img src="img/team/anastasia1.jpg" class="img-responsive img-circle" alt="">
+          <h4>Anastasia Solari</h4>
+          <p class="text-muted">Anastasia is an automation engineer currently at her final year of studies. She is carrying out her thesis, a robotics quadcopter project. In addition, she is mainly interested in the design and development of electronics.</p>
+          <ul class="list-inline social-buttons">
+            <li><a href="https://twitter.com/solarblue_" target="_blank"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li><a href="https://www.facebook.com/anastasia.sol" target="_blank"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/solarblue" target="_blank"><i class="fa fa-linkedin"></i></a>
+            </li>
+            <li><a href="https://github.com/SolarBlue" target="_blank"><i class="fa fa-github"></i></a>
+            </li>
+          </ul>
+          </div>
+        </div>
+      </div>
 			<div class="row">
-				<div class="col-sm-4">
-				  <div class="team-member">
-					<img src="img/team/anastasia1.jpg" class="img-responsive img-circle" alt="">
-					<h4>Anastasia Solari</h4>
-					<p class="text-muted">Anastasia is an automation engineer currently at her final year of studies. She is carrying out her thesis, a robotics quadcopter project. In addition, she is mainly interested in the design and development of electronics.</p>
-					<ul class="list-inline social-buttons">
-					  <li><a href="https://twitter.com/solarblue_" target="_blank"><i class="fa fa-twitter"></i></a>
-					  </li>
-					  <li><a href="https://www.facebook.com/anastasia.sol" target="_blank"><i class="fa fa-facebook"></i></a>
-					  </li>
-					  <li><a href="https://www.linkedin.com/in/solarblue" target="_blank"><i class="fa fa-linkedin"></i></a>
-					  </li>
-					</ul>
-				  </div>
-				</div>
+        <div class="col-sm-4">
+          <div class="team-member">
+          <img src="img/team/nikos1.jpg" class="img-responsive img-circle" alt="">
+          <h4>Nikos Triantafyllidis</h4>
+          <p class="text-muted"></p>
+          <ul class="list-inline social-buttons">
+            <!--<li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+            </li>-->
+            <!--<li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>-
+            </li>-->
+            <li><a href="https://nl.linkedin.com/in/ntriantafyllidis" target="_blank"><i class="fa fa-linkedin"></i></a>
+            </li>
+            <li><a href="https://github.com/ntrianta" target="_blank"><i class="fa fa-github"></i></a>
+            </li>
+          </ul>
+          </div>
+        </div>
 				<div class="col-sm-4">
 				  <div class="team-member">
 					<img src="img/team/dimitra1.jpg" class="img-responsive img-circle" alt="">
@@ -536,6 +599,7 @@
 					  <li><a href="https://www.facebook.com/eustratia.a" target="_blank"><i class="fa fa-facebook"></i></a>
 					  </li>
 					  <li><a href="https://gr.linkedin.com/in/eampaza" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/aefstratia" target="_blank"><i class="fa fa-linkedin"></i></a></li
 					</ul>
 				  </div>
 				</div>
@@ -558,69 +622,37 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/special-thanks/argiris1.jpg" class="img-responsive img-circle" alt="">
-                        <h4><a href="http://argiris.me/portfolio/" target="_blank">Argiris Paraskevas</a></h4>
-                        <p class="text-muted">Argiris is our amazing designer. He created our logo and helped us with the visual part of the website. In the future he is also going to host a series of workshops about Photoshop. We would like to thank him for his great work and assistance.</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/fmayakos" target="_blank"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="https://www.facebook.com/fmayakos" target="_blank"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="http://gr.linkedin.com/in/argirisparaskevas" target="_blank"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/special-thanks/petros1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Petros Gasteratos</h4>
-                        <p class="text-muted">Petros is our powerful "brain". He is supporting the team throughout every step of our way and we can't thank him enough for it. He is also the one that makes our fabulous event posters! </p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/ptrgast" target="_blank"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="https://www.facebook.com/pgasteratos" target="_blank"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="http://gr.linkedin.com/in/pgasteratos" target="_blank"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-				<div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/special-thanks/georgia1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Georgia Tsiamanta</h4>
-                        <p class="text-muted">Georgia was the first person outside the team that helped us through our very beginning. She is "feeding" us with information we find very useful. We would like to thank her for all the things she has done for us. </p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/GTmanta" target="_blank"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="https://www.facebook.com/georgia.t.mantas" target="_blank"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="http://gr.linkedin.com/in/gtsiamanta" target="_blank"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-			</div>
-			<div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/special-thanks/kakiousis1.jpg" class="img-responsive img-circle" alt="">
-                        <h4><a href="http://www.kakiousis.gr/" target="_blank">Kakiousis Printings</a></h4>
-                        <p class="text-muted">Special thanks to Kakiousis Printings for the exquisite work regarding our prints, which he courteously provided us for free!</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/InfoKakiousis" target="_blank"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="https://www.facebook.com/kakiousisdigitalprintings" target="_blank"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <!-- <li><a href="http://gr.linkedin.com/in/argirisparaskevas" target="_blank"><i class="fa fa-linkedin"></i></a>
-                            </li> -->
-                        </ul>
-                    </div>
-                </div>
-			</div>
+              <div class="col-sm-4">
+                  <div class="team-member">
+                      <img src="img/special-thanks/kakiousis1.jpg" class="img-responsive img-circle" alt="">
+                      <h4><a href="http://www.kakiousis.gr/" target="_blank">Kakiousis Printings</a></h4>
+                      <p class="text-muted">Special thanks to Kakiousis Printings for the exquisite work regarding our prints, which he courteously provided us for free!</p>
+                      <ul class="list-inline social-buttons">
+                          <li><a href="https://twitter.com/InfoKakiousis" target="_blank"><i class="fa fa-twitter"></i></a>
+                          </li>
+                          <li><a href="https://www.facebook.com/kakiousisdigitalprintings" target="_blank"><i class="fa fa-facebook"></i></a>
+                          </li>
+                          <!-- <li><a href="http://gr.linkedin.com/in/argirisparaskevas" target="_blank"><i class="fa fa-linkedin"></i></a>
+                          </li> -->
+                      </ul>
+                  </div>
+              </div>
+      				<div class="col-sm-4">
+                  <div class="team-member">
+                      <img src="img/special-thanks/georgia1.jpg" class="img-responsive img-circle" alt="">
+                      <h4>Georgia Tsiamanta</h4>
+                      <p class="text-muted">Georgia was the first person outside the team that helped us through our very beginning. She is "feeding" us with information we find very useful. We would like to thank her for all the things she has done for us. </p>
+                      <ul class="list-inline social-buttons">
+                          <li><a href="https://twitter.com/GTmanta" target="_blank"><i class="fa fa-twitter"></i></a>
+                          </li>
+                          <li><a href="https://www.facebook.com/georgia.t.mantas" target="_blank"><i class="fa fa-facebook"></i></a>
+                          </li>
+                          <li><a href="http://gr.linkedin.com/in/gtsiamanta" target="_blank"><i class="fa fa-linkedin"></i></a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+      			</div>
     </section>
 
     <!-- Clients Aside -->
