minus change on social network

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 					  <li><a href="https://www.facebook.com/eustratia.a" target="_blank"><i class="fa fa-facebook"></i></a>
 					  </li>
 					  <li><a href="https://gr.linkedin.com/in/eampaza" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/aefstratia" target="_blank"><i class="fa fa-linkedin"></i></a></li
+            <li><a href="https://github.com/aefstratia" target="_blank"><i class="fa fa-github"></i></a></li
 					</ul>
 				  </div>
 				</div>
