2 members added - member template created

--- a/index.html
+++ b/index.html
@@ -488,21 +488,21 @@
 					  </ul>
 					</div>
 				</div>
-				<div class="col-sm-4">
-				  <div class="team-member">
-					<img src="img/team/milo1.jpg" class="img-responsive img-circle" alt="">
-					<h4>Katerina Toumpektsi</h4>
-					<p class="text-muted">Katerina is an Architect and also holds a masters degree on Nanotechnology, Processes and Advanced Material Technology from Aristotle University of Thessaloniki. She is particularly interested in innovative research of architectural design, through the material aspect of architecture and the customization potential of parametric architecture, provided by digital technology. Her personal interests include architectural and conceptual competitions, applied arts and design, crafting, traveling and tango.</p>
-					<ul class="list-inline social-buttons">
-					  <li><a href="https://twitter.com/katubek" target="_blank"><i class="fa fa-twitter"></i></a>
-					  </li>
-					  <li><a href="https://www.facebook.com/katarametin.einaidynaton" target="_blank"><i class="fa fa-facebook"></i></a>
-					  </li>
-					  <!-- <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-					  </li> -->
-					</ul>
-				  </div>
-				</div>
+        <div class="col-sm-4">
+          <div class="team-member">
+          <img src="img/team/efi1.jpg" class="img-responsive img-circle" alt="">
+          <h4>Efstratia Ampaza</h4>
+          <p class="text-muted">Efstratia is an undergraduate student in the department of Applied Informatics at the University of Macedonia. She is interested in Artificial Intelligence and Cryptanalysis. Her advice would always be to test your limits as only then you will know what you are capable of.</p>
+          <ul class="list-inline social-buttons">
+            <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+            </li> -->
+            <li><a href="https://www.facebook.com/eustratia.a" target="_blank"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li><a href="https://gr.linkedin.com/in/eampaza" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/aefstratia" target="_blank"><i class="fa fa-github"></i></a></li
+          </ul>
+          </div>
+        </div>
 			</div>
       <div class="row">
         <div class="col-sm-4">
@@ -575,6 +575,21 @@
         </div>
 				<div class="col-sm-4">
 				  <div class="team-member">
+					<img src="img/team/milo1.jpg" class="img-responsive img-circle" alt="">
+					<h4>Katerina Toumpektsi</h4>
+					<p class="text-muted">Katerina is an Architect and also holds a masters degree on Nanotechnology, Processes and Advanced Material Technology from Aristotle University of Thessaloniki. She is particularly interested in innovative research of architectural design, through the material aspect of architecture and the customization potential of parametric architecture, provided by digital technology. Her personal interests include architectural and conceptual competitions, applied arts and design, crafting, traveling and tango.</p>
+					<ul class="list-inline social-buttons">
+					  <li><a href="https://twitter.com/katubek" target="_blank"><i class="fa fa-twitter"></i></a>
+					  </li>
+					  <li><a href="https://www.facebook.com/katarametin.einaidynaton" target="_blank"><i class="fa fa-facebook"></i></a>
+					  </li>
+					  <!-- <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+					  </li> -->
+					</ul>
+				  </div>
+				</div>
+				<div class="col-sm-4">
+				  <div class="team-member">
 					<img src="img/team/dimitra1.jpg" class="img-responsive img-circle" alt="">
 					<h4>Dimitra Karakopoulou</h4>
 					<p class="text-muted">Dimitra is a student at the Department of Economics in the University of Macedonia. She is interested in innovation, creativity and learning new things. She likes to be part of a team, to voluntarily participate in various events and to socialize with new people, as she believes that these traits help her to evolve.</p>
@@ -588,22 +603,62 @@
 					</ul>
 				  </div>
 				</div>
-				<div class="col-sm-4">
-				  <div class="team-member">
-					<img src="img/team/efi1.jpg" class="img-responsive img-circle" alt="">
-					<h4>Efstratia Ampaza</h4>
-					<p class="text-muted">Efstratia is an undergraduate student in the department of Applied Informatics at the University of Macedonia. She is interested in Artificial Intelligence and Cryptanalysis. Her advice would always be to test your limits as only then you will know what you are capable of.</p>
-					<ul class="list-inline social-buttons">
-					  <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-					  </li> -->
-					  <li><a href="https://www.facebook.com/eustratia.a" target="_blank"><i class="fa fa-facebook"></i></a>
-					  </li>
-					  <li><a href="https://gr.linkedin.com/in/eampaza" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/aefstratia" target="_blank"><i class="fa fa-github"></i></a></li
-					</ul>
-				  </div>
-				</div>
 			</div>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="team-member">
+          <img src="img/team/alex1.jpg" class="img-responsive img-circle" alt="">
+          <h4>Alexandros Dorodoulis</h4>
+          <p class="text-muted"></p>
+          <ul class="list-inline social-buttons">
+            <li><a href="https://twitter.com/AlexDorodoulis" target="_blank"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li><a href="https://www.facebook.com/alexdor94" target="_blank"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li><a href="https://gr.linkedin.com/in/alexandrosdorodoulis" target="_blank"><i class="fa fa-linkedin"></i></a>
+            </li>
+            <li><a href="https://github.com/alexdor" target="_blank"><i class="fa fa-github"></i></a>
+            </li>
+          </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+          <img src="img/team/aris1.jpg" class="img-responsive img-circle" alt="">
+          <h4>Aris Papadopoulos</h4>
+          <p class="text-muted"></p>
+          <ul class="list-inline social-buttons">
+            <!-- <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+            </li> -->
+            <li><a href="https://www.facebook.com/aris.papadopoulos.942" target="_blank"><i class="fa fa-facebook"></i></a>
+            </li>
+            <!-- <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+            </li> -->
+          </ul>
+          </div>
+        </div>
+        <!-- template row -->
+        <!--
+        <div class="col-sm-4">
+          <div class="team-member">
+          <img src="img/team/member1.jpg" class="img-responsive img-circle" alt="">
+          <h4>Member Name</h4>
+          <p class="text-muted">Member Description</p>
+          <ul class="list-inline social-buttons">
+            <li><a href="https://twitter.com/username" target="_blank"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li><a href="https://www.facebook.com/username" target="_blank"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li><a href="https://gr.linkedin.com/in/username" target="_blank"><i class="fa fa-linkedin"></i></a>
+            </li>
+            <li><a href="https://github.com/username" target="_blank"><i class="fa fa-github"></i></a>
+            </li>
+          </ul>
+          </div>
+        </div>
+      -->
+      </div>
+
           </div>
             <!-- <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
