--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
       <div class="row">
         <div class="col-sm-4">
             <div class="team-member">
-                <img src="img/special-thanks/argiris1.jpg" class="img-responsive img-circle" alt="">
+                <img src="img/team/argiris1.jpg" class="img-responsive img-circle" alt="">
                 <h4><a href="http://argiris.me/portfolio/" target="_blank">Argiris Paraskevas</a></h4>
                 <p class="text-muted">Argiris is a full-time designer and part-time Informatics student. He helped design our logo and many of the graphics. He was also the host/tutor to our Photoshop Seminar. Finally -quoting him- he is more graphical than Photoshop!</p>
                 <ul class="list-inline social-buttons">
@@ -522,7 +522,7 @@
         </div>
         <div class="col-sm-4">
             <div class="team-member">
-                <img src="img/special-thanks/petros1.jpg" class="img-responsive img-circle" alt="">
+                <img src="img/team/petros1.jpg" class="img-responsive img-circle" alt="">
                 <h4>Petros Gasteratos</h4>
                 <p class="text-muted">Petros is a full stack web developer, a music engineer, a designer, our very own wildcard. He is part of the graphics team and is mainly occupied with the posters. Last but not least, he is also an Informatics student at the Ionian University.</p>
                 <ul class="list-inline social-buttons">
@@ -691,6 +691,59 @@
                           </li> -->
                       </ul>
                   </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="team-member">
+                <img src="img/special-thanks/geoah1.jpg" class="img-responsive img-circle" alt="">
+                <h4>George Antoniadis</h4>
+                <p class="text-muted"></p>
+                <ul class="list-inline social-buttons">
+                  <li><a href="https://twitter.com/geoah" target="_blank"><i class="fa fa-twitter"></i></a>
+                  </li>
+                  <li><a href="https://www.facebook.com/george.antoniadis" target="_blank"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li><a href="https://gr.linkedin.com/in/geoah" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </li>
+                  <li><a href="https://github.com/geoah" target="_blank"><i class="fa fa-github"></i></a>
+                  </li>
+                </ul>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="team-member">
+                <img src="img/special-thanks/kasta1.jpg" class="img-responsive img-circle" alt="">
+                <h4>Katerina Stamou</h4>
+                <p class="text-muted"></p>
+                <ul class="list-inline social-buttons">
+                  <!--<li><a href="https://twitter.com/username" target="_blank"><i class="fa fa-twitter"></i></a>
+                  </li>-->
+                  <!--<li><a href="https://www.facebook.com/username" target="_blank"><i class="fa fa-facebook"></i></a>
+                  </li>-->
+                  <li><a href="https://uk.linkedin.com/in/katerina-stamou-608233a1" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </li>
+                  <!--<li><a href="https://github.com/username" target="_blank"><i class="fa fa-github"></i></a>
+                  </li>-->
+                </ul>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="team-member">
+                <img src="img/special-thanks/liakos1.jpg" class="img-responsive img-circle" alt="">
+                <h4>Konstantinos Liakos</h4>
+                <p class="text-muted"></p>
+                <ul class="list-inline social-buttons">
+                  <!--<li><a href="https://twitter.com/username" target="_blank"><i class="fa fa-twitter"></i></a>
+                  </li>-->
+                  <!--<li><a href="https://www.facebook.com/constantinos.liakos" target="_blank"><i class="fa fa-facebook"></i></a>
+                  </li>-->
+                  <li><a href="https://gr.linkedin.com/in/konstantinos-liakos-97b8404b" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </li>
+                  <!--<li><a href="https://github.com/username" target="_blank"><i class="fa fa-github"></i></a>
+                  </li>-->
+                </ul>
+                </div>
               </div>
       				<div class="col-sm-4">
                   <div class="team-member">
