two special-thanks descriptions added

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 				  <div class="team-member">
 					<img src="img/team/dora1.jpg" class="img-responsive img-circle" alt="">
 					<h4>Theodora Refiadou</h4>
-					<p class="text-muted">Theodora has a degree in Administation and Finance and a degree in Public Relations and Communications as well. Her hobby is learning foreign languages, while she loves italian and russian. She also was involved with the art of photography for about 1,5 years. She is currently working in an office that provides marketing services.</p>
+					<p class="text-muted">Theodora has a degree in Administation and Finance and a degree in Public Relations and Communications as well. Her hobby is learning foreign languages, while she loves italian and russian. She was also involved with the art of photography for about 1,5 years. She is currently working in an office that provides marketing services.</p>
 					<ul class="list-inline social-buttons">
 					  <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
 					  </li> -->
@@ -577,7 +577,7 @@
 				  <div class="team-member">
 					<img src="img/team/milo1.jpg" class="img-responsive img-circle" alt="">
 					<h4>Katerina Toumpektsi</h4>
-					<p class="text-muted">Katerina is an Architect and also holds a masters degree on Nanotechnology, Processes and Advanced Material Technology from Aristotle University of Thessaloniki. She is particularly interested in innovative research of architectural design, through the material aspect of architecture and the customization potential of parametric architecture, provided by digital technology. Her personal interests include architectural and conceptual competitions, applied arts and design, crafting, traveling and tango.</p>
+					<p class="text-muted">Katerina is an Architect and also holds a masters degree on Nanotechnology, Processes and Advanced Material Technology from AUTh. She is particularly interested in innovative research of architectural design, through the material aspect of architecture and the customization potential of parametric architecture, provided by digital technology. Her personal interests include architectural and conceptual competitions, applied arts and design, crafting, traveling and tango.</p>
 					<ul class="list-inline social-buttons">
 					  <li><a href="https://twitter.com/katubek" target="_blank"><i class="fa fa-twitter"></i></a>
 					  </li>
@@ -694,6 +694,23 @@
               </div>
               <div class="col-sm-4">
                 <div class="team-member">
+                <img src="img/special-thanks/kasta1.jpg" class="img-responsive img-circle" alt="">
+                <h4>Katerina Stamou</h4>
+                <p class="text-muted">Katerina has been mentoring us for the last few months. She is always trying to guide us and give her great advice on many things and we are lucky to have met her. Finally, we would like to thank her for believing in us and supporting us earnestly.</p>
+                <ul class="list-inline social-buttons">
+                  <!--<li><a href="https://twitter.com/username" target="_blank"><i class="fa fa-twitter"></i></a>
+                  </li>-->
+                  <!--<li><a href="https://www.facebook.com/username" target="_blank"><i class="fa fa-facebook"></i></a>
+                  </li>-->
+                  <li><a href="https://uk.linkedin.com/in/katerina-stamou-608233a1" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  </li>
+                  <!--<li><a href="https://github.com/username" target="_blank"><i class="fa fa-github"></i></a>
+                  </li>-->
+                </ul>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="team-member">
                 <img src="img/special-thanks/geoah1.jpg" class="img-responsive img-circle" alt="">
                 <h4>George Antoniadis</h4>
                 <p class="text-muted"></p>
@@ -709,30 +726,13 @@
                 </ul>
                 </div>
               </div>
-              <div class="col-sm-4">
-                <div class="team-member">
-                <img src="img/special-thanks/kasta1.jpg" class="img-responsive img-circle" alt="">
-                <h4>Katerina Stamou</h4>
-                <p class="text-muted"></p>
-                <ul class="list-inline social-buttons">
-                  <!--<li><a href="https://twitter.com/username" target="_blank"><i class="fa fa-twitter"></i></a>
-                  </li>-->
-                  <!--<li><a href="https://www.facebook.com/username" target="_blank"><i class="fa fa-facebook"></i></a>
-                  </li>-->
-                  <li><a href="https://uk.linkedin.com/in/katerina-stamou-608233a1" target="_blank"><i class="fa fa-linkedin"></i></a>
-                  </li>
-                  <!--<li><a href="https://github.com/username" target="_blank"><i class="fa fa-github"></i></a>
-                  </li>-->
-                </ul>
-                </div>
-              </div>
             </div>
             <div class="row">
               <div class="col-sm-4">
                 <div class="team-member">
                 <img src="img/special-thanks/liakos1.jpg" class="img-responsive img-circle" alt="">
                 <h4>Konstantinos Liakos</h4>
-                <p class="text-muted"></p>
+                <p class="text-muted">Konstantinos is an excellent accountant and is our personal advisor on such issues, for which we are thankful - even though sometimes we are stubborn and don't listen to his well-stated advice.</p>
                 <ul class="list-inline social-buttons">
                   <!--<li><a href="https://twitter.com/username" target="_blank"><i class="fa fa-twitter"></i></a>
                   </li>-->
@@ -749,7 +749,7 @@
                   <div class="team-member">
                       <img src="img/special-thanks/georgia1.jpg" class="img-responsive img-circle" alt="">
                       <h4>Georgia Tsiamanta</h4>
-                      <p class="text-muted">Georgia was the first person outside the team that helped us through our very beginning. She is "feeding" us with information we find very useful. We would like to thank her for all the things she has done for us. </p>
+                      <p class="text-muted">Georgia was the first person outside the team that helped us through our very beginning. She is "feeding" us with information we find very useful and we would like to thank her for all the support. </p>
                       <ul class="list-inline social-buttons">
                           <li><a href="https://twitter.com/GTmanta" target="_blank"><i class="fa fa-twitter"></i></a>
                           </li>
@@ -784,12 +784,12 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="https://zen.coderdojo.com/dojo/807">
+                    <a href="https://zen.coderdojo.com/dojo/807" target="_blank">
                         <img src="img/logos/coderdojothess.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                  <div class="col-md-3 col-sm-6">
-                    <a href="http://www.techministry.gr/">
+                    <a href="http://www.techministry.gr/" target="_blank">
                         <img src="img/logos/tmlogo.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
