special-thanks description added

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                 <div class="team-member">
                 <img src="img/special-thanks/geoah1.jpg" class="img-responsive img-circle" alt="">
                 <h4>George Antoniadis</h4>
-                <p class="text-muted"></p>
+                <p class="text-muted">Geoah is a professional web developer who has helped us with both his advice and knowledge on the web. We would like to thank him for his support and guidance, specifically on the web development series workshops.</p>
                 <ul class="list-inline social-buttons">
                   <li><a href="https://twitter.com/geoah" target="_blank"><i class="fa fa-twitter"></i></a>
                   </li>
