--- a/index.html
+++ b/index.html
@@ -560,12 +560,12 @@
           <div class="team-member">
           <img src="img/team/nikos1.jpg" class="img-responsive img-circle" alt="">
           <h4>Nikos Triantafyllidis</h4>
-          <p class="text-muted"></p>
+          <p class="text-muted">Nikos holds a BSc in Computer Science from the Aristotle University as well as an MSc in System and Network Engineering from the University of Amsterdam. He is currently working as a Security Consultant in the Netherlands. His professional interests include Data Management, Systems Engineering and Cyber Security. He loves Jazz and Food (note the capital F), and prefers his outstanding work in programming, music and poetry speak for instead of him. This section was in no way written by himself...</p>
           <ul class="list-inline social-buttons">
             <!--<li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
             </li>-->
-            <!--<li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>-
-            </li>-->
+            <li><a href="https://www.facebook.com/nick.triantafillidis" target="_blank"><i class="fa fa-facebook"></i></a>
+            </li>
             <li><a href="https://nl.linkedin.com/in/ntriantafyllidis" target="_blank"><i class="fa fa-linkedin"></i></a>
             </li>
             <li><a href="https://github.com/ntrianta" target="_blank"><i class="fa fa-github"></i></a>
@@ -624,9 +624,9 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-          <img src="img/team/aris1.jpg" class="img-responsive img-circle" alt="">
+          <img src="img/team/aris1.png" class="img-responsive img-circle" alt="">
           <h4>Aris Papadopoulos</h4>
-          <p class="text-muted"></p>
+          <p class="text-muted">Aristotelis is an undergraduate student in the department of Applied Informatics at the University of Macedonia. He likes coding and he is a very organizational and businesslike person and it is obvious of how structured his programs are. Aristotelis wants to experience various things in life and that's what he suggests everyone to do</p>
           <ul class="list-inline social-buttons">
             <!-- <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
             </li> -->
