Changed linkedin url

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     </li>
                     <li><a href="https://www.facebook.com/pgasteratos" target="_blank"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li><a href="http://gr.linkedin.com/in/pgasteratos" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <li><a href="http://gr.linkedin.com/in/ptrgast" target="_blank"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li><a href="https://github.com/ptrgast" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
