--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     <div class="team-member">
                         <img src="img/team/katerina1.jpg" class="img-responsive img-circle" alt="">
                         <h4>Aikaterini Katmada</h4>
-                        <p class="text-muted">Katerina is a Computer Science graduate from Aristotle University of Thessaloniki (AuTh) and an aspiring artist. She  a holds a BSc in CS from the Informatics Dept. of AuTh, as well as a MSc from the same department. Her interests include HCI, computer games art & design and visual arts. She spends her free time etching and improving her printmaking skills!</p>
+                        <p class="text-muted">Katerina is a Computer Science graduate from Aristotle University of Thessaloniki (AuTh) and an aspiring artist. She  a holds a BSc in CS from the Informatics Dept. of AuTh, as well as a MSc from the same department. Her interests include UX, HCI, computer games art & design and visual arts. She spends her free time etching and improving her printmaking skills!</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/KaterinaKatmada" target="_blank"><i class="fa fa-twitter"></i></a>
                             </li>
