Fixed Aris name

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
         <div class="col-sm-4">
           <div class="team-member">
           <img src="img/team/aris1.png" class="img-responsive img-circle" alt="">
-          <h4>Aris Papadopoulos</h4>
+          <h4>Aristotelis Papadopoulos</h4>
           <p class="text-muted">Aristotelis is an undergraduate student in the department of Applied Informatics at the University of Macedonia. He likes coding and he is a very organizational and businesslike person and it is obvious of how structured his programs are. Aristotelis wants to experience various things in life and that's what he suggests everyone to do</p>
           <ul class="list-inline social-buttons">
             <!-- <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
