--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
           <div class="team-member">
           <img src="img/team/nikos1.jpg" class="img-responsive img-circle" alt="">
           <h4>Nikos Triantafyllidis</h4>
-          <p class="text-muted">Nikos holds a BSc in Computer Science from the Aristotle University as well as an MSc in System and Network Engineering from the University of Amsterdam. He is currently working as a Security Consultant in the Netherlands. His professional interests include Data Management, Systems Engineering and Cyber Security. He loves Jazz and Food (note the capital F), and prefers his outstanding work in programming, music and poetry speak for instead of him. This section was in no way written by himself...</p>
+          <p class="text-muted">Nikos holds a BSc in Computer Science from the Aristotle University as well as an MSc in System and Network Engineering from the University of Amsterdam. He is currently working as a Security Consultant in the Netherlands. His professional interests include Data Management, Systems Engineering and Cyber Security. He loves Jazz and Food (note the capital F), and prefers his outstanding work in programming, music and poetry speak instead of him. This section was in no way written by himself...</p>
           <ul class="list-inline social-buttons">
             <!--<li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
             </li>-->
